fix overflow content in game rules

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,11 +136,6 @@ credits: https://www.w3schools.com/howto/howto_css_glowing_text.asp
   padding: 1%;
 }
 
-.scroll-content {
-  height: 90vh;
-  overflow: scroll;
-}
-
 /* ------ CONTROL PANEL ------ */
 #mode-select,
 #level-select,
@@ -183,4 +178,12 @@ credits: https://www.w3schools.com/howto/howto_css_glowing_text.asp
 /* ------ CONTACT AREA ------ */
 #contact-area {
   text-align: center;
+}
+
+/* ------ RESPONSIVENESS ------ */
+@media screen and (max-width: 600px) {
+  .scroll-content {
+    height: 90vh;
+    overflow-y: scroll;
+  }
 }
